Bug 573689 key events lost while page is loading r=smaug, sr=roc