layout/base/nsIPresShell.h
@@ -97,6 +97,7 @@ class gfxContext;
 class nsIDOMEvent;
 class nsDisplayList;
 class nsDisplayListBuilder;
+class nsPIDOMWindow;
 
 typedef short SelectionType;
 typedef PRUint64 nsFrameState;
@@ -129,8 +130,8 @@ typedef struct CapturingContentInfo {
 } CapturingContentInfo;
 
 #define NS_IPRESSHELL_IID     \
-  { 0x7ae0e29f, 0x4d2e, 0x4acd, \
-    { 0xb5, 0x74, 0xb6, 0x40, 0x8a, 0xca, 0xb8, 0x4d } }
+  { 0x6b32e1ca, 0xb295, 0x406d, \
+    { 0xb2, 0x8b, 0x73, 0xda, 0xc3, 0x66, 0xc2, 0xa7 } }
 
 // Constants for ScrollContentIntoView() function
 #define NS_PRESSHELL_SCROLL_TOP      0
@@ -1001,6 +1002,11 @@ public:
    */
   PRUint64 GetPaintCount() { return mPaintCount; }
   void IncrementPaintCount() { ++mPaintCount; }
+
+  /**
+   * Get the root DOM window of this presShell.
+   */
+  virtual already_AddRefed<nsPIDOMWindow> GetRootWindow() = 0;
 
   /**
    * Refresh observer management.
